5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1596_1446.log
== TEST (2019-03-26 18:40:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a - round(quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a-round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a-round(quantidade_de michael,   3)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round(quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a - round(quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round  (quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a - round  (quantidade_de michael,   3)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a- round (quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a- round (quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a -round (quantidade_de michael,   3)
print
-- ERROR:
File "XXXX", line 7
    a -round (quantidade_de michael,   3)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round (quantidade_de michael,   3)
print=
-- ERROR:
File "XXXX", line 7
    a - round (quantidade_de michael,   3)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:41:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round (quantidade_de michael,   3)
print=
-- ERROR:
File "XXXX", line 7
    a - round (quantidade_de michael,   3)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:41:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round (quantidade_de michael, 3)
print
-- ERROR:
File "XXXX", line 7
    a - round (quantidade_de michael, 3)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:41:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round (quantidade_de michael,3)
print
-- ERROR:
File "XXXX", line 7
    a - round (quantidade_de michael,3)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round ( quantidade_de michael,3 )
print
-- ERROR:
File "XXXX", line 7
    a - round ( quantidade_de michael,3 )
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round (¨ quantidade_de michael,3 ¨)
print
-- ERROR:
File "XXXX", line 7
    a - round (¨ quantidade_de michael,3 ¨)
               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round (¨ quantidade_de michael,3 ¨)
print
-- ERROR:
File "XXXX", line 7
    a - round (¨ quantidade_de michael,3 ¨)
               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round (¨ quantidade_de michael,3 ¨)
print
-- ERROR:
File "XXXX", line 7
    a - round (¨ quantidade_de michael,3 ¨)
               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round (¨ quantidade_de michael,3 ¨ )
print
-- ERROR:
File "XXXX", line 7
    a - round (¨ quantidade_de michael,3 ¨ )
               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round ( quantidade_de michael,3 )
print
-- ERROR:
File "XXXX", line 7
    a - round ( quantidade_de michael,3 )
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round ( quantidade_de michael,3 ):
print
-- ERROR:
File "XXXX", line 7
    a - round ( quantidade_de michael,3 ):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros
a - round ( quantidade_de michael,3 )
print
-- ERROR:
File "XXXX", line 7
    a - round ( quantidade_de michael,3 )
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_litros - float(input())
NameError: name 'qtd_litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:45:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - float(input())
qtd_de_michael - 1/3 -  qtd_litros

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_litros - float(input())
NameError: name 'qtd_litros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:45:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
qtd_de_michael - 1/3 -  qtd_litros

-- ERROR:
File "XXXX", line 6
    qtd_de_michael - 1/3 -  qtd_litros
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
(qtd_de_michael - 1/3 -  qtd_litros)

-- ERROR:
File "XXXX", line 7
    
                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
(qtd_de_michael - 1/3 -  qtd_litros)
-- ERROR:
File "XXXX", line 7
    
                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
(qtd_de_michael - 1/3 -  qtd_litros)
-- ERROR:
File "XXXX", line 7
    
                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
(¨qtd_de_michael - 1/3 -  qtd_litros¨)
-- ERROR:
File "XXXX", line 6
    (¨qtd_de_michael - 1/3 -  qtd_litros¨)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
(¨qtd_de_michael - 1/3 -  qtd_litros¨)
a - round ( quantidade_de michael,3 )
print
-- ERROR:
File "XXXX", line 6
    (¨qtd_de_michael - 1/3 -  qtd_litros¨)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
(¨qtd_de_michael - 1/3 -  qtd_litros¨)
a - round ( quantidade_de michael,3 )
print
-- ERROR:
File "XXXX", line 6
    (¨qtd_de_michael - 1/3 -  qtd_litros¨)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
(¨qtd_de_michael - 1/3 -  qtd_litros¨)
a - round ( quantidade_de michael,3 )
print
-- ERROR:
File "XXXX", line 6
    (¨qtd_de_michael - 1/3 -  qtd_litros¨)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
(¨qtd_de_michael - 1/3 -  qtd_litros¨)
a - round ( quantidade_de michael,3 )
-- ERROR:
File "XXXX", line 6
    (¨qtd_de_michael - 1/3 -  qtd_litros¨)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:48:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros - (float(input())
(¨qtd_de_michael - 1/3 -  qtd_litros¨)
a - round ( quantidade_de michael, 3 )
				  print
-- ERROR:
File "XXXX", line 6
    (¨qtd_de_michael - 1/3 -  qtd_litros¨)
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
